--- a/src/features/contact/Contact.module.css
+++ b/src/features/contact/Contact.module.css
@@ -35,7 +35,7 @@
   font-size: small;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .contactWrapper {
     width: 90%;
   }
