--- a/src/features/footer/Footer.module.css
+++ b/src/features/footer/Footer.module.css
@@ -87,7 +87,7 @@
   color: white;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .footerContainer {
     display: flex;
     flex-direction: column;
